k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: production
  labels:
    app: backend
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      serviceAccountName: backend-serviceaccount
      containers:
        - name: backend-container
          image: mattaudu/backend-app:v1.0.6
          imagePullSecrets:
            - name: dockerhub-secret
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              memory: "512Mi"  
              cpu: "250m"      
            limits:
              memory: "1Gi"  
              cpu: "500m"
